# Streamlit-Image-Annotation

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
example/: README.md  classification.py  demo.py  detection.py  input_types.py  multipage_example.py  pointdet.py  sam_segmentation.py
example/pages/: 00_page_top.py  01_page_detection.py  03_page_point.py  04_page_all_tabs.py
example/pages_example/: 01_page_detection.py  02_page_classification.py  03_page_point.py  04_page_all_tabs.py
scripts/: build_all.sh
streamlit_image_annotation/: __init__.py
streamlit_image_annotation/Classification/: __init__.py
streamlit_image_annotation/Classification/frontend/: .env  package.json
streamlit_image_annotation/Classification/frontend/src/: Classification.tsx  index.tsx
streamlit_image_annotation/Detection/: __init__.py
streamlit_image_annotation/Detection/frontend/: package.json
streamlit_image_annotation/Detection/frontend/src/: BBox.tsx  BBoxCanvas.tsx  Detection.tsx  index.tsx
streamlit_image_annotation/Point/: __init__.py
streamlit_image_annotation/Point/frontend/: package.json  tsconfig.json
streamlit_image_annotation/Point/frontend/src/: Point.tsx  PointCanvas.tsx  PointDet.tsx  ThemeSwitcher.tsx  index.tsx
